--- a/.github/workflows/git-guardian-scan.yml
+++ b/.github/workflows/git-guardian-scan.yml
@@ -2,6 +2,9 @@ name: GitGuardian scan
 
 on: [push, pull_request]
 
+permissions:
+  contents: read
+
 jobs:
   scanning:
     name: GitGuardian scan
