--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -105,7 +105,7 @@ jobs:
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@0.5.1
         with:
-          image-ref: ${{ steps.containerizing.outputs.image-name }}
+          image-ref: ${{ env.image-name }}
           format: "table"
           exit-code: "1"
           ignore-unfixed: true
