Rework dir structure to make containerizing easier

--- a/.github/workflows/receive-pull-request.yml
+++ b/.github/workflows/receive-pull-request.yml
@@ -29,8 +29,12 @@ jobs:
     steps:
       - name: Checking out
         uses: actions/checkout@v3
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/golang@0.3.0
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       - name: Run Trivy vulnerability scanner in repo mode
-        uses: aquasecurity/trivy-action@0.7.1
+        uses: aquasecurity/trivy-action@0.5.1
         with:
           scan-type: "fs"
           ignore-unfixed: false
@@ -38,37 +42,51 @@ jobs:
           exit-code: "1"
           severity: "CRITICAL"
 
-#  qa:
-#    runs-on: ubuntu-20.04
-#    steps:
-#      - name: Checking out
-#        uses: actions/checkout@v3
-#      - name: Setup Go
-#        uses: actions/setup-go@v3
-#        with:
-#          go-version: "^1.14.0"
-#      - name: Install dependencies
-#        run: go mod download
-#      - name: Testing
-#        run: go test
-#      - name: Checking Dockerfile
-#        uses: hadolint/hadolint-action@v2.0.0
-#        with:
-#          verbose: true
+  qa:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checking out
+        uses: actions/checkout@v3
+      - name: Setup Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: "^1.17.0"
+      - name: Lint
+        uses: golangci/golangci-lint-action@v3
+      - name: Vet
+        run: go vet
+      - name: Checking Dockerfile
+        uses: hadolint/hadolint-action@v2.1.0
+        with:
+          verbose: true
 
-#  build:
-#    runs-on: ubuntu-20.04
-#    steps:
-#      - name: Checking out
-#        uses: actions/checkout@v3
-#      - name: Setup Go
-#        uses: actions/setup-go@v3
-#        with:
-#          go-version: "^1.14.0"
-#      - name: Install dependencies
-#        run: go mod download
-#      - name: Building
-#        run: go build -o bodleian-service
+  test:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checking out
+        uses: actions/checkout@v3
+      - name: Setup Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: "^1.17.0"
+      - name: Install dependencies
+        run: go mod download
+      - name: Testing
+        run: go test ./...
+
+  build:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checking out
+        uses: actions/checkout@v3
+      - name: Setup Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: "^1.17.0"
+      - name: Install dependencies
+        run: go mod download
+      - name: Building
+        run: go build -o bodleian-service
 #
 #  mark-pr:
 #    needs:
