--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,7 +74,7 @@ jobs:
           CODACY_USERNAME: ${{ github.repository_owner }}
           CODACY_API_TOKEN: ${{ secrets.CODACY_API_TOKEN }}
 
-  build-and-deploy-container:
+  build-container:
     needs:
       - qa
       - test
@@ -111,11 +111,11 @@ jobs:
           ignore-unfixed: true
           vuln-type: "os,library"
           severity: "CRITICAL,HIGH"
-#      - name: Pushing image
-#        id: push
-#        run: ./scripts/containerize
-#        env:
-#          OUTPUT_MODE: push
+      - name: Pushing image
+        id: push
+        run: ./scripts/containerize
+        env:
+          OUTPUT_MODE: push
 #      - name: Deploying to Cloud Run
 #        id: deploy
 #        uses: google-github-actions/deploy-cloudrun@v0.10.0
