--- a/.github/workflows/deploy-tag.yml
+++ b/.github/workflows/deploy-tag.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Setting up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Build image name
-        run: ./scripts/build-image-name
+        run: ./scripts/build-image-name.sh
       - run: echo "Should deploy ${{ env.image-name}}"
 #      - name: Deploying to Cloud Run
 #        id: deploy
