--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,7 @@ jobs:
         with:
           verbose: true
       - name: Check shell scripts
-        uses: ludeeus/action-shellcheck@v1.1.0
+        uses: ludeeus/action-shellcheck@1.1.0
         with:
           severity: warning
           scandir: './scripts'
