--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -123,7 +123,7 @@ jobs:
           OUTPUT_MODE: push
       - name: Deploying to Cloud Run
         id: deploy
-        uses: google-github-actions/deploy-cloudrun@v0.10.0
+        uses: google-github-actions/deploy-cloudrun@v0.10.1
         with:
           image: ${{ env.image-name }}
           service: ${{ secrets.CLOUD_RUN_SERVICE }}
@@ -145,5 +145,13 @@ jobs:
       - name: Testing if service is up
         run: |
           echo "Testing if ${{ steps.push.outputs.image-name }} is up at ${{ steps.deploy.outputs.url }}"
-          curl ${{ steps.deploy.outputs.url }}/health \
+          curl --fail-with-body \ 
+            ${{ steps.deploy.outputs.url }}/api/health \
             --header "Authorization: Bearer ${{ steps.auth.outputs.id_token }}"
+      - name: Run API tests
+        uses: matt-ball/newman-action@v1.0.4
+        with:
+#          apiKey: ${{ secrets.postmanApiKey }}
+          collection: Bodleian.postman_collection.json
+#          environment: 5922408-228c7edd-fc15-4f68-9665-a35d7df6945b
+
