--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -145,9 +145,10 @@ jobs:
       - name: Testing if service is up
         run: |
           echo "Testing if ${{ env.image-name }} is up at ${{ steps.deploy.outputs.url }}"
-          curl --fail \ 
-            -H "Authorization: Bearer ${{ steps.auth.outputs.id_token }}" \
-            ${{ steps.deploy.outputs.url }}/api/health
+          curl -H "Authorization: Bearer $(gcloud auth print-identity-token)" https://main-latest---backend-83496-btesdmljxq-ey.a.run.app/api/health
+#          curl --fail \
+#            -H "Authorization: Bearer ${{ steps.auth.outputs.id_token }}" \
+#            "${{ steps.deploy.outputs.url }}/api/health"
 #      - name: Run API tests
 #        uses: matt-ball/newman-action@v1.0.4
 #        with:
