--- a/.github/workflows/deploy-tag.yml
+++ b/.github/workflows/deploy-tag.yml
@@ -1,9 +1,9 @@
 name: Deploy tagged version
 on:
-  workflow_run:
-    workflows: ["Build main"]
-    types:
-      - completed
+#  workflow_run:
+#    workflows: ["Build main"]
+#    types:
+#      - completed
   workflow_dispatch:
 
 permissions:
