--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -143,7 +143,8 @@ jobs:
           create_credentials_file: false
           export_environment_variables: false
       - name: Testing if service is up
-        run: ./scripts/is-service-up.sh
+        run: |
+          ./scripts/is-service-up.sh
         env:
           BASE_URL: ${{ steps.deploy.outputs.url }}
           BEARER_TOKEN: ${{ steps.auth.outputs.id_token }}
