--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -133,11 +133,14 @@ jobs:
           tag: main-latest
       - name: Authenticating
         id: auth
-        uses: google-github-actions/auth@v0.7.3
+        uses: google-github-actions/auth@v0.8.3
         with:
-          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
-          service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }}
-          token_format: id_token
+          credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
+#          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+#          service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }}
+
+#          token_format: id_token
+          token_format: access_token
           id_token_audience: ${{ steps.deploy.outputs.url }}
           id_token_include_email: true
           create_credentials_file: false
