--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -140,11 +140,11 @@ jobs:
 #          service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }}
 
 #          token_format: id_token
-          token_format: access_token
-          id_token_audience: ${{ steps.deploy.outputs.url }}
-          id_token_include_email: true
-          create_credentials_file: false
-          export_environment_variables: false
+#          token_format: access_token
+#          id_token_audience: ${{ steps.deploy.outputs.url }}
+#          id_token_include_email: true
+#          create_credentials_file: false
+#          export_environment_variables: false
       - name: Testing if service is up
         run: |
           gcloud auth list
