--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -135,9 +135,9 @@ jobs:
         id: auth
         uses: google-github-actions/auth@v0.8.3
         with:
-          credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
-#          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
-#          service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }}
+#          credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
+          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+          service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }}
 
 #          token_format: id_token
 #          token_format: access_token
