--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -138,8 +138,7 @@ jobs:
 #          credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
           workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
           service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }}
-
-#          token_format: id_token
+          token_format: id_token
 #          token_format: access_token
 #          id_token_audience: ${{ steps.deploy.outputs.url }}
 #          id_token_include_email: true
