--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,8 +21,8 @@ jobs:
     steps:
       - name: Checking out
         uses: actions/checkout@v3
-      - name: Setting up GCP environment
-        uses: google-github-actions/setup-gcloud@v1.0.0
+#      - name: Setting up GCP environment
+#        uses: google-github-actions/setup-gcloud@v1.0.0
 #      - name: Authenticating
 #        id: auth
 #        uses: google-github-actions/auth@v1.0.0
@@ -46,7 +46,7 @@ jobs:
 
       - name: Authenticating
         id: auth
-        uses: google-github-actions/auth@v1.0.0
+        uses: google-github-actions/auth@v1
         with:
           workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
           service_account: bodleian-backend-cicd@bodleian-398addce.iam.gserviceaccount.com
@@ -55,7 +55,7 @@ jobs:
           id_token_audience: https://main-latest---backend-83496-btesdmljxq-ey.a.run.app
           id_token_include_email: true
       - name: Setting up GCP environment
-        uses: google-github-actions/setup-gcloud@v1.0.0
+        uses: google-github-actions/setup-gcloud@v1
       - run: |
           gcloud info
           gcloud auth list
