--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,17 +53,14 @@ jobs:
           workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
           service_account: bodleian-backend-cicd@bodleian-398addce.iam.gserviceaccount.com
           token_format: id_token
-#          id_token_audience: https://backend-83496-btesdmljxq-ey.a.run.app
-          id_token_audience: https://main-latest---backend-83496-btesdmljxq-ey.a.run.app
+          id_token_audience: https://main-latest---backend-83496-btesdmljxq-ey.a.run.app/api/health
           id_token_include_email: true
       - name: Setting up GCP environment
         uses: google-github-actions/setup-gcloud@v1
       - run: |
-          gcloud auth print-access-token
           gcloud info
           gcloud auth list
       - run: gcloud config list account --format "value(core.account)"
       - id: "invoke-service"
-        run: |-
-          curl --fail https://main-latest---backend-83496-btesdmljxq-ey.a.run.app \
-          --header "Authorization: Bearer ${{ steps.auth.outputs.id_token }}"
+        run: |
+          curl --fail -v -H "Authorization: Bearer $(gcloud auth print-identity-token)" https://main-latest---backend-83496-btesdmljxq-ey.a.run.app/api/health
